fix: added test plan to workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,4 @@ jobs:
         testPaths: "test-results/cucumber-report.json"
         testExecKey: "QA-4220"
         projectKey: "QA"
+        testPlanKey: "QA-4222"
