--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,5 @@ jobs:
         password: ${{ secrets.client_secret }}
         testFormat: "cucumber"
         testPaths: "test-results/cucumber-report.json"
-       # testExecKey: "QA-4220"
-        #projectKey: "QA"
-        #testPlanKey: "QA-4222"
-        testExecutionJson: "bdd/testExecution.json"
+        testExecKey: "QA-4219"
+        testPlanKey: "QA-4222"
