--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,12 +21,32 @@ jobs:
     - name: Run BDD tests
       run: npm run test:bdd
 
-    - name: Submit results to Xray
-      uses: mikepenz/xray-action@v2.4.5
-      with:
-        username: ${{ secrets.client_id }}
-        password: ${{ secrets.client_secret }}
-        testFormat: "cucumber"
-        testPaths: "test-results/cucumber-report.json"
-        testExecKey: "QA-4219"
-        testPlanKey: "QA-4222"
+    # - name: Submit results to Xray
+    #   uses: mikepenz/xray-action@v2.4.5
+    #   with:
+    #     username: ${{ secrets.client_id }}
+    #     password: ${{ secrets.client_secret }}
+    #     testFormat: "cucumber"
+    #     testPaths: "test-results/cucumber-report.json"
+    #     testExecKey: "QA-4219"
+    #     testPlanKey: "QA-4222"
+    #     testEnvironments: "SIT"
+    
+    - name: Get Authentication Token
+      id: get-token
+      run: | 
+        response=$(curl -s -X POST -H "Content-Type: application/json" \
+        -d '{"client_id": "'"$XRAY_CLIENT_ID"'", "client_secret": "'"$XRAY_CLIENT_SECRET"'"}' \
+        https://xray.cloud.getxray.app/api/v2/authenticate) 
+        echo "::set-output name=token::$(echo $response | tr -d '"')"
+      env: 
+        XRAY_CLIENT_ID: ${{ secrets.XRAY_CLIENT_ID }} 
+        XRAY_CLIENT_SECRET: ${{ secrets.XRAY_CLIENT_SECRET }}
+
+    # - name: Submit Results to Xray 
+    #   run: | 
+    #    curl -H "Content-Type: multipart/form-data" \ 
+    #     -H "Authorization: Bearer ${{ steps.get-token.outputs.token }}" \
+    #     -F "info=@test-execution.json;type=application/json" \ 
+    #     -F "results=@test-results/cucumber-report.json;type=application/json" \ 
+    #     https://xray.cloud.getxray.app/api/v2/import/execution/cucumber/multipart
