--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,8 @@ jobs:
         response=$(curl -s -X POST -H "Content-Type: application/json" \
         -d '{"client_id": "'"$XRAY_CLIENT_ID"'", "client_secret": "'"$XRAY_CLIENT_SECRET"'"}' \
         https://xray.cloud.getxray.app/api/v2/authenticate) 
-        echo "::set-output name=token::$(echo $response | tr -d '"')"
+        token=$(echo $response | tr -d '"')
+        echo "XRAY_TOKEN=$token" >> $GITHUB_ENV
       env: 
         XRAY_CLIENT_ID: ${{ secrets.XRAY_CLIENT_ID }} 
         XRAY_CLIENT_SECRET: ${{ secrets.XRAY_CLIENT_SECRET }}
