--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
         https://xray.cloud.getxray.app/api/v2/authenticate) 
         token=$(echo $response | tr -d '"')
         echo "Generated Token: $token" # This line will echo the token
-        echo "XRAY_TOKEN=$token" >> $GITHUB_ENV
+       # echo "XRAY_TOKEN=$token" >> $GITHUB_ENV
         
       env: 
         XRAY_CLIENT_ID: ${{ secrets.client_id }} 
