fix: curl command

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,10 @@ jobs:
         password: ${{ secrets.client_secret }}
         testFormat: "cucumber"
         testPaths: "test-results/cucumber-report.json"
-        testExecutionJson: "bdd/testExecution.json"  
+        testExecKey: "QA-4219"
+        testPlanKey: "QA-4222"
+        projectKey: "QA"
+       # testExecutionJson: "bdd/testExecution.json"  
     
     # - name: Get Authentication Token
     #   id: get-token
