--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm run test:bdd
 
     - name: Submit results to Xray
-      if: always() && env.ENV == 'QA'
+      if: success() || failure() && env.ENV == 'QA'
       uses: mikepenz/xray-action@v2.4.5
       with:
         username: ${{ secrets.client_id }}
