--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,18 +23,23 @@ jobs:
     - name: Run BDD tests
       run: npm run test:bdd
 
-    - name: Submit results to Xray
-      if: success() || failure() && env.ENV == 'QA'
-      uses: mikepenz/xray-action@v2.4.5
-      with:
-        username: ${{ secrets.client_id }}
-        password: ${{ secrets.client_secret }}
-        testFormat: "cucumber"
-        testPaths: "test-results/cucumber-report.json"
+    - name: Rerun the failed tests
+      if: failure()
+      run: npm run test:rerun
+
+  #X ray Integration code commented out for now
+    #- name: Submit results to Xray
+     # if: success() || failure() && env.ENV == 'QA'
+     # uses: mikepenz/xray-action@v2.4.5
+     # with:
+     #   username: ${{ secrets.client_id }}
+      #  password: ${{ secrets.client_secret }}
+      #  testFormat: "cucumber"
+      #  testPaths: "test-results/cucumber-report.json"
         #testExecKey: "QA-4219"
         #testPlanKey: "QA-4222"
         #projectKey: "QA"
-        testExecutionJson: "bdd/helper/testExecution.json"
+       # testExecutionJson: "bdd/helper/testExecution.json"
     
     # - name: Get Authentication Token
     #   id: get-token
